--- a/w8/wrapUp/stp1/style/stp1.css
+++ b/w8/wrapUp/stp1/style/stp1.css
@@ -39,10 +39,22 @@
 #hero1 {
   background-color: black;
   display: flex;
+  container-type: inline-size;
+  container-name: nav;
+}
+@container nav (width < 35rem) {
+  #hero1 .container {
+    aline-items: center;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 #hero2 {
+  aline-items: center;
+  display: flex;
   margin-inline: auto;
+  padding-inline: auto;
   container-type: inline-size;
   container-name: footer;
 }
@@ -54,7 +66,6 @@
 }
 #hero2 .main__text {
   padding-top: 70px;
-  margin-inline: auto;
   font-weight: bolder;
   font-size: 28px;
   letter-spacing: -2px;
@@ -62,6 +73,8 @@
   font-weight: 700;
 }
 #hero2 .main__imgs {
+  margin-inline: auto;
+  padding-inline: auto;
   margin-left: 63px;
   margin-right: 63px;
   padding-top: 24px;
@@ -112,16 +125,25 @@
 @container footer (width < 88.125rem) {
   #hero2 .main__imgs {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    aline-items: center;
   }
 }
 @container footer (width < 74.375rem) {
   #hero2 .main__imgs {
     grid-template-columns: 1fr 1fr 1fr;
+    aline-items: center;
   }
 }
 @container footer (width < 60.3125rem) {
   #hero2 .main__imgs {
     grid-template-columns: 1fr 1fr;
+    aline-items: center;
+  }
+  #hero2 .main__text {
+    font-size: 18px;
+  }
+  #hero2 .container {
+    padding-inline: 0;
   }
 }
 
