--- a/w8/wrapUp/stp1/style/stp1.css
+++ b/w8/wrapUp/stp1/style/stp1.css
@@ -44,9 +44,16 @@
 }
 @container nav (width < 35rem) {
   #hero1 .container {
-    aline-items: center;
-    margin: 0;
-    padding: 0;
+    display: flex;
+  }
+  #hero1 .banner {
+    margin-inline: auto;
+  }
+  #hero1 img {
+    width: 90%;
+    height: 90%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
