--- a/w8/wrapUp/stp1/style/stp1.scss
+++ b/w8/wrapUp/stp1/style/stp1.scss
@@ -52,9 +52,16 @@
 
   @container nav (width < 35rem) {
     .container {
-      aline-items: center;
-      margin: 0;
-      padding: 0;
+      display: flex;
+      // margin-inline: auto;
+    }
+    .banner {
+      margin-inline: auto;
+    }
+    img {
+      width: 90%;
+      height: 90%;
+      object-fit: cover;
     }
   }
 }
