--- a/w8/wrapUp/stp1/style/stp1.scss
+++ b/w8/wrapUp/stp1/style/stp1.scss
@@ -59,9 +59,10 @@
       margin-inline: auto;
     }
     img {
-      width: 90%;
-      height: 90%;
-      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      // object-fit: cover;
+      overflow: hidden;
     }
   }
 }
