--- a/w8/wrapUp/stp1/style/stp1.css
+++ b/w8/wrapUp/stp1/style/stp1.css
@@ -50,10 +50,9 @@
     margin-inline: auto;
   }
   #hero1 img {
-    width: 90%;
-    height: 90%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
 }
 
