--- a/w15/stp1/style/stp1.css
+++ b/w15/stp1/style/stp1.css
@@ -32,6 +32,7 @@ body {
   min-height: max(100dvh, 2rem);
   margin-inline: auto;
   padding-inline: 2rem;
+  overflow: hidden;
 }
 
 header {
@@ -134,6 +135,7 @@ footer .wrapper {
 }
 
 #title {
+  font-size: 50px;
   filter: blur(0.1875rem);
   transition: all 500ms ease-in-out;
 }
@@ -177,11 +179,12 @@ footer .wrapper {
 
 #section3 h2 {
   filter: blur(0.1875rem);
-  transition: all 500ms ease-in-out;
+  transition: all 700ms ease-out;
 }
 #section3 h2:hover {
   filter: blur(0);
-  transition: all 500ms ease-in-out;
+  color: rgb(127, 23, 23);
+  transition: all 300ms ease-in;
 }
 
 @keyframes wiggle {
@@ -189,16 +192,16 @@ footer .wrapper {
     transform: rotateZ(0);
   }
   15% {
-    transform: rotateZ(-10deg);
+    transform: rotateZ(-3deg);
   }
   20% {
     transform: rotateZ(10deg);
   }
   25% {
-    transform: rotateZ(-7deg);
+    transform: rotateZ(-3deg);
   }
   30% {
-    transform: rotateZ(6deg);
+    transform: rotateZ(2deg);
   }
   35% {
     transform: rotateZ(-2deg);
@@ -207,6 +210,16 @@ footer .wrapper {
     transform: rotateZ(0);
   }
 }
+#section4 p.animTarget {
+  filter: blur(0.125rem);
+  color: transparent;
+  transition: all 1500ms ease-in-out;
+}
+#section4.triggered .animTarget {
+  filter: blur(0);
+  color: var(--txt);
+}
+
 @media (width < 66.25rem) {
   .stickyWrapper {
     grid-template-columns: 1fr;
