--- a/w12/wrapUp/stp1/style/style.scss
+++ b/w12/wrapUp/stp1/style/style.scss
@@ -120,15 +120,15 @@ section:nth-child(even) {
   }
 }
 
-#section5 {
-  .animTarget {
-  }
-  &.triggered {
-    .animTarget {
-      animation: wiggle 2s linear infinite;
-    }
-  }
-}
+// #section5 {
+//   .animTarget {
+//   }
+//   &.triggered {
+//     .animTarget {
+//       animation: wiggle 2s linear infinite;
+//     }
+//   }
+// }
 
 @keyframes wiggle {
   0%,
