--- a/w15/stp1/style/theme.light.css
+++ b/w15/stp1/style/theme.light.css
@@ -5,5 +5,5 @@
   --surface-transparent: rgb(228, 225, 230, 50%);
   --Surface: #dcd9de;
   --onSurface: #1b1b1f;
-  --accent: #4756b2;
+  --accent: #621717;
 }
