--- a/w15/stp1/style/stp1.scss
+++ b/w15/stp1/style/stp1.scss
@@ -50,7 +50,7 @@ body {
 
 header {
   text-align: center;
-  text-wrap: balance;
+  // text-wrap: balance;
   word-break: keep-all;
 }
 
@@ -193,17 +193,20 @@ footer {
 #section2 {
   .animTarget {
     transform: translateX(100vw);
+    filter: blur(0.125rem);
     transition: transform 500ms ease-in-out;
   }
   &.triggered {
     .animTarget {
       transform: translateX(0);
+      filter: blur(0);
     }
   }
 }
 
 #section3 {
   h3.animTarget {
+    font-size: larger;
   }
   &.triggered {
     h3.animTarget {
@@ -220,6 +223,7 @@ footer {
   h2:hover {
     filter: blur(0);
     color: rgb(127, 23, 23);
+    text-shadow: 0px 0px 5px rgb(0, 0, 0);
     transition: all 300ms ease-in;
   }
 }
@@ -233,16 +237,16 @@ footer {
     transform: rotateZ(-3deg);
   }
   20% {
-    transform: rotateZ(10deg);
+    transform: rotateZ(5deg);
   }
   25% {
-    transform: rotateZ(-3deg);
+    transform: rotateZ(-2deg);
   }
   30% {
     transform: rotateZ(2deg);
   }
   35% {
-    transform: rotateZ(-2deg);
+    transform: rotateZ(-1deg);
   }
   40%,
   100% {
@@ -260,6 +264,42 @@ footer {
     .animTarget {
       filter: blur(0);
       color: $txt;
+    }
+  }
+}
+
+#section5 {
+  p.animTarget {
+    filter: blur(0.125rem);
+    // transform: translateY(-100vw);
+    // color: transparent;
+    transition: all 500ms ease-in-out;
+  }
+  &.triggered {
+    p.animTarget {
+      filter: blur(0);
+      // transform: translateY(0);
+      color: $txt;
+    }
+  }
+}
+
+#section6 {
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+
+  p.animTarget {
+    filter: blur(0.25rem);
+    color: black;
+    transform: scale(50%);
+    transition: all 100ms ease-in-out;
+  }
+  &.triggered {
+    .animTarget {
+      filter: blur(0);
+      color: rgb(145, 9, 9);
+      transform: scale(100%);
     }
   }
 }
