--- a/w15/stp1/style/theme.dark.css
+++ b/w15/stp1/style/theme.dark.css
@@ -1,9 +1,9 @@
 :root {
   --bg: #1b1b1f;
-  --bgVariant: #46464f;
+  --bgVariant: #472020;
   --txt: #e4e1e6;
   --surface-transparent: rgb(53, 52, 56, 50%);
   --Surface: #131316;
   --onSurface: #c8c5ca;
-  --accent: #bbc3ff;
+  --accent: #ffffff;
 }
